Finish auth nav styling and fix bug with caching.

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -16,3 +16,9 @@
 
 .App-link {
   color: #09d3ac; }
+
+/** Navbar **/
+.navbar-nav .userAvatar {
+  padding: 10px; }
+  .navbar-nav .userAvatar img {
+    width: 30px; }
