--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -20,3 +20,13 @@
 .App-link {
   color: #09d3ac;
 }
+
+/** Navbar **/
+.navbar-nav{
+  .userAvatar{
+    padding: 10px; 
+    img{
+      width: 30px; 
+    }
+  }
+}
