--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -30,3 +30,20 @@
     }
   }
 }
+
+/** Emote Submission **/
+.submission-wrapper{
+  .emote-dropzone{
+    border: 2px dashed #dedede;
+    border-radius: 5px;
+    background: #f5f5f5;
+    .card-body{
+      .p{
+        color: rgba(0,0,0,.54);
+        font-weight: 500;
+        font-size: initial;
+        text-transform: uppercase;
+      } 
+    }
+  }
+}
