--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,35 +1,1 @@
-.App {
-  text-align: center; }
-
-.App-logo {
-  height: 40vmin; }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white; }
-
-.App-link {
-  color: #09d3ac; }
-
-/** Navbar **/
-.navbar-nav .userAvatar {
-  padding: 10px; }
-  .navbar-nav .userAvatar img {
-    width: 30px; }
-
-/** Emote Submission **/
-.submission-wrapper .emote-dropzone {
-  border: 2px dashed #dedede;
-  border-radius: 5px;
-  background: #f5f5f5; }
-  .submission-wrapper .emote-dropzone .card-body .p {
-    color: rgba(0, 0, 0, 0.54);
-    font-weight: 500;
-    font-size: initial;
-    text-transform: uppercase; }
+.App{text-align:center}.App-logo{height:40vmin}.App-header{background-color:#282c34;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center;font-size:calc(10px + 2vmin);color:white}.App-link{color:#09d3ac}.navbar-nav .userAvatar{padding:10px}.navbar-nav .userAvatar img{width:30px}.submission-wrapper .emote-dropzone{margin-top:2em;border:2px dashed #dedede;border-radius:5px;text-align:center}.submission-wrapper .emote-dropzone .card-body .p{color:rgba(0,0,0,0.54);font-weight:500;font-size:initial;text-transform:uppercase}
