Emote uploading! Save emotes to db, save emotes to user. Validate emotes.

--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -33,18 +33,32 @@
 
 /** Emote Submission **/
 .submission-wrapper{
-  .emote-dropzone{
-    margin-top: 2em;
-    border: 2px dashed #dedede;
-    border-radius: 5px;
-    text-align:center;
+  .dropzone-area{
+    margin-top: 1.5em;
+    .dzu-dropzone{
+      border: 2px dashed #dedede;
+      border-radius: 5px;
+      text-align:center;
+      overflow: inherit;
+      .dzu-inputLabel{
+        color:white;
+        text-transform: none;
+      }
+      .dzu-previewContainer{
+        padding: 1em 3%;
+        background-color: #444;
+      }
+      .dzu-previewButton{
+        color:white;
+        background-image: url('../images/x-icon.png')!important;
+        background-repeat: no-repeat;
+      }
+    }
     .card-body{
-      .p{
-        color: rgba(0,0,0,.54);
-        font-weight: 500;
-        font-size: initial;
-        text-transform: uppercase;
-      } 
+      color: rgba(0,0,0,.54);
+      font-weight: 500;
+      font-size: initial;
+      text-transform: uppercase;
     }
   }
 }
