Initial state changes, profile page changes, changes to auth success and get emotes api. Other fixes.

--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -22,43 +22,55 @@
 }
 
 /** Navbar **/
-.navbar-nav{
-  .userAvatar{
-    padding: 10px; 
-    img{
-      width: 30px; 
+.header{
+  margin-bottom:2em!important;
+  .navbar-nav{
+    .userAvatar{
+      padding: 10px; 
+      img{
+        width: 30px; 
+      }
     }
   }
 }
 
-/** Emote Submission **/
-.submission-wrapper{
-  .dropzone-area{
-    margin-top: 1.5em;
-    .dzu-dropzone{
-      border: 2px dashed #dedede;
-      border-radius: 5px;
-      text-align:center;
-      overflow: inherit;
-      .dzu-inputLabel{
-        color:white;
-        text-transform: none;
+/** Body **/
+.content-body{
+  .card{
+    margin-bottom: 2em;
+  }
+
+  /** Emote Submission **/
+  .submission-wrapper{
+    .dropzone-area{
+      margin-top: 1.5em;
+      .dzu-dropzone{
+        border: 2px dashed #dedede;
+        border-radius: 5px;
+        text-align:center;
+        overflow: inherit;
+        .dzu-inputLabel{
+          color:white;
+          text-transform: none;
+        }
+        .dzu-previewContainer{
+          padding: 1em 3%;
+          background-color: #444;
+        }
+        .dzu-previewButton{
+          color:white;
+          background-image: url('../images/x-icon.png')!important;
+          background-repeat: no-repeat;
+        }
       }
-      .dzu-previewContainer{
-        padding: 1em 3%;
-        background-color: #444;
+      .card-body{
+        color: rgba(0,0,0,.54);
+        font-weight: 500;
+        font-size: initial;
+        text-transform: uppercase;
       }
-      .dzu-previewButton{
-        color:white;
-        background-image: url('../images/x-icon.png')!important;
-        background-repeat: no-repeat;
-      }
-    }
-    .card-body{
-      color: rgba(0,0,0,.54);
-      font-weight: 500;
-      font-size: initial;
-      text-transform: uppercase;
     }
   }
 }
+
+
